[package]
name = "coin98-gift"
version = "1.0.0"
authors = ["coin98"]
license = "Apache-2.0"
edition = "2021"

[dependencies]
anchor-lang = "0.24.2"

[features]
cpi = ["no-entrypoint"]
default = []
localhost = []
no-entrypoint = []
no-idl = []

[lib]
name = "coin98_gift"
crate-type = ["cdylib", "lib"]
